plang/testing/logs/false-incorrect/35/program35.p.p
tGe (Y) Qk1SQ (tHG WiH) :- ((x uLNk (vWd0) BRa)); r (O8Ws); nWZVu h8Og9 (WGDp) (I) ew0, yvpAx (B) jNCh (p) HH; hl6 J, mCe (aV7U (l (c) (haiYl (jp (tA) Q8 (R1S9s) (rleF8 iDyXA)) HOAa) (CV) (o9 G fvjD FRY))); zlino (DRqJk) (NeJkB) xDKK (n r (uQn) l); zE (u), (ofX; mY (mzdoS (gm8cc (fKtlO K2 (odB) (oa2bf (BsE8) (H) eiEU)))) tRBXg cj), t7caM M (ywjU1 w3k (GQ2)) (h Uey XbS4), eJHTk (Y1v) EnNC (Awe) QG; pq (WW) bo o1ey; wI6T.
nAU.


? (((mPtfz (cfEE eoh) (yo y3 (V)), f (bN6 Ccf (lEh9 (Ud)) (OgJj))), aKJ ZbO e fp4xz, rkn H (w (lIzX (kt5 p5HB xxx (jd BUf Sy3 (T) sYnU)) (Z) MXggy) (Rs)) j0t (DPto); m)).


